# DARKV1

./: .replit  main.py  mm.py  pyproject.toml  replit.md
.local/state/replit/agent/filesystem/: filesystem_state.json
app/: __init__.py  database.py
app/auth/: __init__.py  middleware.py
app/models/: client.py
app/routes/: ai.py  auth.py  background.py  image.py  music.py  social.py  video.py  voice.py
app/utils/: logging.py  redis_client.py  security.py
attached_assets/: Pasted-DarkAI-A-new-API-has-been-released-for-gemini-pro-imager-image-generation-and-editing-Exam-1757400718113_1757400718119.txt  Pasted-DarkAI-A-new-API-has-been-released-for-gemini-pro-imager-image-generation-and-editing-Exam-1757404644174_1757404644181.txt  Pasted-Got-you-loud-clear-Below-is-a-practical-security-first-roadmap-to-build-a-backend-tha-1757399480851_1757399480853.txt  Pasted-Skip-to-content-Agent-U-have-to-fix-those-6-endpoints-Image-Generation-POST-api-gemini-img-Gemini-1757406325510_1757406325513.txt
